solução de bug da imagem

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="d-flex align-items-center py-3">
                 <div class="logo-container">
                     <!-- Método à prova de erros para SVG -->
-                    <object data="./img/logo-commix.svg" type="image/svg+xml" class="logo-svg me-3">
+                    <object data="./img/logo-comunix.svg" type="image/svg+xml" class="logo-svg me-3">
                         <!-- Fallback caso o SVG falhe -->
                         <img src="./img/logo-fallback.png" alt="Comunix" style="height:100%">
                     </object>
